--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-Check if the flight has a registration and if not ignore it.
-Make program run periodically
-Add timestamp to the database entry.
+Check if the flight has a registration and if not ignore it. #
+Make program run periodically #
+Add timestamp to the database entry. #
